# ChangeLog for x11-themes/qtcurve
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve/ChangeLog,v 1.6 2007/03/22 18:45:24 beandog Exp $

*qtcurve-0.48.1 (22 Mar 2007)
*qtcurve-0.48 (22 Mar 2007)

  22 Mar 2007; Steve Dibb <beandog@gentoo.org> +qtcurve-0.48.ebuild,
  +qtcurve-0.48.1.ebuild:
  Version bump, bug 171197

*qtcurve-0.47 (09 Mar 2007)

  09 Mar 2007; Steve Dibb <beandog@gentoo.org> +qtcurve-0.47.ebuild:
  version bump

*qtcurve-0.46.4 (06 Mar 2007)

  06 Mar 2007; Steve Dibb <beandog@gentoo.org> +metadata.xml,
  +qtcurve-0.46.4.ebuild:
  Initial commit, bug 24830
