@@ -1,0 +1,3 @@
+MD5 eef799692c7549c41bfbe2b9bd4f799b QtCurve-KDE3-0.48.2.tar.gz 599772
+RMD160 b47211da15597b575761a6716676bd6d89f2c094 QtCurve-KDE3-0.48.2.tar.gz 599772
+SHA256 8eb87c243a522d49e1eb30b0794e8f57accf9bfb42b506c70c3b85421de1e50d QtCurve-KDE3-0.48.2.tar.gz 599772
