@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/qtcurve
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve/ChangeLog,v 1.6 2007/03/22 18:45:24 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/qtcurve/ChangeLog,v 1.7 2007/03/24 02:21:13 beandog Exp $
+
+*qtcurve-0.48.2 (24 Mar 2007)
+
+  24 Mar 2007; Steve Dibb <beandog@gentoo.org> +qtcurve-0.48.2.ebuild:
+  version bump
 
 *qtcurve-0.48.1 (22 Mar 2007)
 *qtcurve-0.48 (22 Mar 2007)
